--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                     year: 'numeric'
                 })}</p>
                 <div class="quote">"${milestone.quote}"</div>
-                <img src="/api/placeholder/400/250" alt="Placeholder Image" />
+                <img src="https://imgur.com/a/h6C81BX" alt="Study Motivation" />
                 <div class="reward">
                     <h3>Reward for completion:</h3>
                     <p>${milestone.reward}</p>
